# claude-bus

./: .gitignore  .mcp.json  CLAUDE.md  Dockerfile  README.md  ROADMAP.md  bus_server.py  docker-compose.yml  install_claude_bus.sh  pyproject.toml  setup.sh
.claude-plugin/: marketplace.json  plugin.json
commands/: bus.md
examples/: mcp.json.example  settings.json
hooks/: hooks.json  inject_state.py  stop_bus.py
scripts/: gen_installer.py
src/claude_bus/: __init__.py  core.py  http_server.py  server.py
tests/: conftest.py  test_claims.py  test_delivery.py  test_identity.py  test_migration.py  test_state.py
